--- a/frontend/src/app/features/user-management/components/user-list/user-list.component.html
+++ b/frontend/src/app/features/user-management/components/user-list/user-list.component.html
@@ -1,12 +1,20 @@
-<ag-grid-angular
-  class="ag-theme-alpine"
-  [rowData]="rowData"
-  [columnDefs]="columnDefs"
-  [defaultColDef]="defaultColDef"
-  [pagination]="true"
-  [paginationPageSize]="paginationPageSize"
-  [paginationPageSizeSelector]="[10, 25, 50, 100, 200]"
-  style="width: 100%; height: 500px; overflow-y: auto;"
-  (cellClicked)="handleAction($event)"
-  (gridReady)="onGridReady($event)"
-></ag-grid-angular>
+<div class="user-list">
+  <ag-grid-angular
+    class="user-list__grid ag-theme-alpine"
+    style="width: 100%; height: 600px;"
+    [columnDefs]="columnDefs"
+    [defaultColDef]="defaultColDef"
+    [getRowId]="getRowId"
+    [rowModelType]="rowModelType"
+    [suppressAggFuncInHeader]="true"
+    [paginationPageSizeSelector]="[10, 25, 50, 100, 200]"
+    (storeRefreshed)="onStoreRefreshed($event)"
+    (gridReady)="onGridReady($event)"
+    [context]="context"
+    [components]="frameworkComponents"
+    [pagination]="true"
+    [paginationPageSize]="paginationPageSize"
+    [cacheBlockSize]="paginationPageSize"
+  >
+  </ag-grid-angular>
+</div>
