--- a/frontend/src/app/features/user-management/pages/user-management-page/user-management-page.component.html
+++ b/frontend/src/app/features/user-management/pages/user-management-page/user-management-page.component.html
@@ -1,23 +1,7 @@
 <div class="container mt-4">
-  <button class="btn btn-primary mb-3" (click)="openModal('create')">Add User</button>
+  <button class="btn btn-primary mb-3" (click)="openModal('add')">Add User</button>
   <app-user-list
-    (onEdit)="openModal('edit', $event)"
-    (onViewDetails)="openModal('details', $event)"
+    (onEdit)="openModal('edit',$event)"
+    (onViewDetails)="viewUser($event)"
   ></app-user-list>
-
-  <app-modal
-    #modal
-    [title]="modalTitle"
-    [showFooter]="modalType !== 'details'"
-    [showSaveButton]="modalType === 'edit' || modalType === 'create'"
-    (onClose)="closeModal()"
-  >
-    <ng-container *ngIf="modalType === 'details'">
-      <app-user-details [user]="selectedUser"></app-user-details>
-    </ng-container>
-
-    <ng-container *ngIf="modalType === 'edit' || modalType === 'create'">
-      <app-user-form [user]="selectedUser" (formSubmit)="handleSave($event)"></app-user-form>
-    </ng-container>
-  </app-modal>
 </div>
