--- a/frontend/src/app/features/user-management/components/user-form/user-form.component.html
+++ b/frontend/src/app/features/user-management/components/user-form/user-form.component.html
@@ -1,89 +1,125 @@
-<!-- user-form.component.html -->
-<form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="needs-validation">
-  <!-- Full Name -->
-  <div class="mb-3">
-    <label for="fullName" class="form-label">Full Name</label>
-    <input
-      type="text"
-      id="fullName"
-      class="form-control"
-      formControlName="fullName"
-      [ngClass]="{
-        'is-invalid': userForm.get('fullName')?.invalid &&
-        (userForm.get('fullName')?.dirty || userForm.get('fullName')?.touched)
+<h2 mat-dialog-title>{{ data.action === 'add' ? 'Add User' : 'Edit User' }}</h2>
+<div mat-dialog-content>
+  <form [formGroup]="userForm"  class="needs-validation">
+    <!-- Full Name -->
+    <div class="mb-3">
+      <label for="fullName" class="form-label">Full Name</label>
+      <input
+        type="text"
+        id="fullName"
+        class="form-control"
+        formControlName="full_name"
+        [ngClass]="{
+        'is-invalid': userForm.get('full_name')?.invalid &&
+        (userForm.get('full_name')?.dirty || userForm.get('full_name')?.touched)
       }"
-    />
-    <div class="invalid-feedback">
-      {{ getErrorMessage('fullName') }}
+      />
+      <div class="invalid-feedback">
+        {{ getErrorMessage('full_name') }}
+      </div>
     </div>
-  </div>
 
-  <!-- Username -->
-  <div class="mb-3">
-    <label for="username" class="form-label">Username</label>
-    <input
-      type="text"
-      id="username"
-      class="form-control"
-      formControlName="username"
-    />
-  </div>
+    <!-- Username -->
+    <div class="mb-3">
+      <label for="username" class="form-label">User Name</label>
+      <input
+        type="text"
+        id="username"
+        class="form-control"
+        formControlName="user_name"
+      />
+    </div>
 
-  <!-- Email -->
-  <div class="mb-3">
-    <label for="email" class="form-label">Email</label>
-    <input
-      type="email"
-      id="email"
-      class="form-control"
-      formControlName="email"
-      [ngClass]="{
+    <!-- Email -->
+    <div class="mb-3">
+      <label for="email" class="form-label">Email</label>
+      <input
+        type="email"
+        id="email"
+        class="form-control"
+        formControlName="email"
+        [ngClass]="{
         'is-invalid': userForm.get('email')?.invalid &&
         (userForm.get('email')?.dirty || userForm.get('email')?.touched)
       }"
-    />
-    <div class="invalid-feedback">
-      {{ getErrorMessage('email') }}
+      />
+      <div class="invalid-feedback">
+        {{ getErrorMessage('email') }}
+      </div>
     </div>
-  </div>
 
-  <!-- Phone -->
-  <div class="mb-3">
-    <label for="phone" class="form-label">Phone</label>
-    <input
-      type="text"
-      id="phone"
-      class="form-control"
-      formControlName="phone"
-      [ngClass]="{
-        'is-invalid': userForm.get('phone')?.invalid &&
-        (userForm.get('phone')?.dirty || userForm.get('phone')?.touched)
+    <!-- Phone -->
+    <div class="mb-3">
+      <label for="telephone" class="form-label">Phone</label>
+      <input
+        type="text"
+        id="telephone"
+        class="form-control"
+        formControlName="telephone"
+        [ngClass]="{
+        'is-invalid': userForm.get('telephone')?.invalid &&
+        (userForm.get('telephone')?.dirty || userForm.get('telephone')?.touched)
       }"
-    />
-    <div class="invalid-feedback">
-      {{ getErrorMessage('phone') }}
+      />
+      <div class="invalid-feedback">
+        {{ getErrorMessage('telephone') }}
+      </div>
     </div>
-  </div>
+    <!-- Role -->
+    <div class="mb-3">
+      <label for="role" class="form-label">Role</label>
+      <input
+        id="role"
+        type="number"
+        class="form-control"
+        formControlName="role"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">password</label>
+      <input
+        id="password"
+        type="number"
+        class="form-control"
+        formControlName="password"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="birthday" class="form-label">birthday</label>
+      <input
+        id="birthday"
+        type="date"
+        class="form-control"
+        formControlName="birthday"
+      />
+    </div>
 
-  <!-- Role -->
-  <div class="mb-3">
-    <label for="role" class="form-label">Role</label>
-    <select
-      id="role"
-      class="form-select"
-      formControlName="role"
-      [ngClass]="{
+    <!-- Role -->
+    <!--<div class="mb-3">
+      <label for="role" class="form-label">Role</label>
+      <select
+        id="role"
+        class="form-select"
+        formControlName="role"
+        [ngClass]="{
         'is-invalid': userForm.get('role')?.invalid &&
         (userForm.get('role')?.dirty || userForm.get('role')?.touched)
       }"
-    >
-      <option value="" disabled>Select a role</option>
-      <option *ngFor="let role of roles" [value]="role">
-        {{ role }}
-      </option>
-    </select>
-    <div class="invalid-feedback">
-      {{ getErrorMessage('role') }}
-    </div>
-  </div>
-</form>
+      >
+        <option value="" disabled>Select a role</option>
+        <option *ngFor="let role of roles" [value]="role">
+          {{ role }}
+        </option>
+      </select>
+      <div class="invalid-feedback">
+        {{ getErrorMessage('role') }}
+      </div>
+    </div>-->
+  </form>
+</div>
+<div mat-dialog-actions align="end">
+  <button mat-button (click)="onClose()">Cancel</button>
+  <button mat-raised-button color="primary" (click)="test()" >
+    {{ data.action === 'add' ? 'Add' : 'Update' }}
+  </button>
+</div>
