--- a/frontend/src/app/features/user-management/components/user-list/action-cell-renderer/action-cell-renderer.component.html
+++ b/frontend/src/app/features/user-management/components/user-list/action-cell-renderer/action-cell-renderer.component.html
@@ -4,20 +4,20 @@
     class="action-buttons__button action-buttons__button--edit btn btn-info"
     (click)="onEdit()"
     title="Edit">
-    <i class="bi bi-pencil"></i>
+    <i class="action-buttons__icon bi bi-pencil"></i>
   </button>
   <button
     type="button"
     class="action-buttons__button action-buttons__button--view btn btn-warning"
     (click)="onViewDetails()"
     title="View Details">
-    <i class="bi bi-eye"></i>
+    <i class="action-buttons__icon bi bi-eye"></i>
   </button>
   <button
     type="button"
     class="action-buttons__button action-buttons__button--delete btn btn-danger"
     (click)="onDelete()"
     title="Delete">
-    <i class="bi bi-trash"></i>
+    <i class="action-buttons__icon bi bi-trash"></i>
   </button>
 </div>
