--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-navbar></app-navbar>
-<router-outlet/>
+<div class="app-container">
+  <header class="app-header">
+    <app-navbar></app-navbar>
+  </header>
+  <main class="app-content">
+    <router-outlet></router-outlet>
+  </main>
+</div>
