--- a/frontend/src/app/features/user-management/components/user-form/user-form.component.html
+++ b/frontend/src/app/features/user-management/components/user-form/user-form.component.html
@@ -1,125 +1,139 @@
-<h2 mat-dialog-title>{{ data.action === 'add' ? 'Add User' : 'Edit User' }}</h2>
-<div mat-dialog-content>
-  <form [formGroup]="userForm"  class="needs-validation">
-    <!-- Full Name -->
-    <div class="mb-3">
-      <label for="fullName" class="form-label">Full Name</label>
-      <input
-        type="text"
-        id="fullName"
-        class="form-control"
-        formControlName="full_name"
-        [ngClass]="{
-        'is-invalid': userForm.get('full_name')?.invalid &&
-        (userForm.get('full_name')?.dirty || userForm.get('full_name')?.touched)
-      }"
-      />
-      <div class="invalid-feedback">
-        {{ getErrorMessage('full_name') }}
-      </div>
-    </div>
-
-    <!-- Username -->
-    <div class="mb-3">
-      <label for="username" class="form-label">User Name</label>
-      <input
-        type="text"
-        id="username"
-        class="form-control"
-        formControlName="user_name"
-      />
-    </div>
-
-    <!-- Email -->
-    <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
-      <input
-        type="email"
-        id="email"
-        class="form-control"
-        formControlName="email"
-        [ngClass]="{
-        'is-invalid': userForm.get('email')?.invalid &&
-        (userForm.get('email')?.dirty || userForm.get('email')?.touched)
-      }"
-      />
-      <div class="invalid-feedback">
-        {{ getErrorMessage('email') }}
-      </div>
-    </div>
-
-    <!-- Phone -->
-    <div class="mb-3">
-      <label for="telephone" class="form-label">Phone</label>
-      <input
-        type="text"
-        id="telephone"
-        class="form-control"
-        formControlName="telephone"
-        [ngClass]="{
-        'is-invalid': userForm.get('telephone')?.invalid &&
-        (userForm.get('telephone')?.dirty || userForm.get('telephone')?.touched)
-      }"
-      />
-      <div class="invalid-feedback">
-        {{ getErrorMessage('telephone') }}
-      </div>
-    </div>
-    <!-- Role -->
-    <div class="mb-3">
-      <label for="role" class="form-label">Role</label>
-      <input
-        id="role"
-        type="number"
-        class="form-control"
-        formControlName="role"
-      />
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">password</label>
-      <input
-        id="password"
-        type="number"
-        class="form-control"
-        formControlName="password"
-      />
-    </div>
-    <div class="mb-3">
-      <label for="birthday" class="form-label">birthday</label>
-      <input
-        id="birthday"
-        type="date"
-        class="form-control"
-        formControlName="birthday"
-      />
-    </div>
-
-    <!-- Role -->
-    <!--<div class="mb-3">
-      <label for="role" class="form-label">Role</label>
-      <select
-        id="role"
-        class="form-select"
-        formControlName="role"
-        [ngClass]="{
-        'is-invalid': userForm.get('role')?.invalid &&
-        (userForm.get('role')?.dirty || userForm.get('role')?.touched)
-      }"
-      >
-        <option value="" disabled>Select a role</option>
-        <option *ngFor="let role of roles" [value]="role">
-          {{ role }}
-        </option>
-      </select>
-      <div class="invalid-feedback">
-        {{ getErrorMessage('role') }}
-      </div>
-    </div>-->
-  </form>
+<div class="modal-header">
+    <h5 class="modal-title">
+        {{ data.action === 'add' ? 'Add User' : data.action === 'edit' ? 'Edit User' : 'View User' }}
+    </h5>
+    <button type="button" class="btn-close" aria-label="Close" (click)="onCancel()"></button>
 </div>
-<div mat-dialog-actions align="end">
-  <button mat-button (click)="onClose()">Cancel</button>
-  <button mat-raised-button color="primary" (click)="test()" >
-    {{ data.action === 'add' ? 'Add' : 'Update' }}
-  </button>
+
+<div class="modal-body">
+    <form [formGroup]="userForm">
+
+      <input type="hidden" id="userId" formControlName="id" />
+
+        <div class="row mb-3">
+            <div class="col">
+                <label for="fullName" class="form-label">Full Name</label>
+                <input
+                        type="text"
+                        id="fullName"
+                        class="form-control"
+                        formControlName="full_name"
+                        [ngClass]="{ 'is-invalid': isInvalid('full_name') }"
+                />
+                <div class="invalid-feedback">
+                    {{ getErrorMessage('full_name') }}
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label for="username" class="form-label">User Name</label>
+                <input
+                        type="text"
+                        id="username"
+                        class="form-control"
+                        formControlName="user_name"
+                        [ngClass]="{ 'is-invalid': isInvalid('user_name') }"
+                />
+                <div class="invalid-feedback">
+                    {{ getErrorMessage('user_name') }}
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label for="birthday" class="form-label">Birthday</label>
+                <input
+                        type="date"
+                        id="birthday"
+                        class="form-control"
+                        formControlName="birthday"
+                        [ngClass]="{ 'is-invalid': isInvalid('birthday') }"
+                />
+                <div class="invalid-feedback">
+                    {{ getErrorMessage('birthday') }}
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label for="role" class="form-label">Role</label>
+                <select
+                        id="role"
+                        class="form-select"
+                        formControlName="role"
+                        [ngClass]="{ 'is-invalid': isInvalid('role') }"
+                >
+                    <option value="" disabled>Select Role</option>
+                    <option *ngFor="let role of roles" [value]="role.id">{{ role.name }}</option>
+                </select>
+                <div class="invalid-feedback">
+                    {{ getErrorMessage('role') }}
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label for="email" class="form-label">Email</label>
+                <input
+                        type="email"
+                        id="email"
+                        class="form-control"
+                        formControlName="email"
+                        [ngClass]="{ 'is-invalid': isInvalid('email') }"
+                />
+                <div class="invalid-feedback">
+                    {{ getErrorMessage('email') }}
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label for="telephone" class="form-label">Telephone</label>
+                <input
+                        type="text"
+                        id="telephone"
+                        class="form-control"
+                        formControlName="telephone"
+                        [ngClass]="{ 'is-invalid': isInvalid('telephone') }"
+                />
+                <div class="invalid-feedback">
+                    {{ getErrorMessage('telephone') }}
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col">
+                <label for="password" class="form-label">Password</label>
+                <input
+                        type="password"
+                        id="password"
+                        class="form-control"
+                        formControlName="password"
+                        [ngClass]="{ 'is-invalid': isInvalid('password') }"
+                />
+                <div class="invalid-feedback">
+                    {{ getErrorMessage('password') }}
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="onCancel()">Close</button>
+    <button
+            type="button"
+            class="btn btn-primary"
+            (click)="onSubmit()"
+            [disabled]="userForm.invalid || data.action === 'view'"
+    >
+        {{ data.action === 'add' ? 'Add User' : 'Update User' }}
+    </button>
 </div>
