--- a/frontend/src/app/features/user-management/components/user-list/action-cell-renderer/action-cell-renderer.component.scss
+++ b/frontend/src/app/features/user-management/components/user-list/action-cell-renderer/action-cell-renderer.component.scss
@@ -1,16 +1,29 @@
-@media (max-width: 768px) {
-  .action-buttons {
-    flex-direction: column;
-    align-items: stretch;
+.action-buttons {
+  display: flex;
+  justify-content: center;
+}
 
-    &__button {
-      width: 100%;
-      margin-bottom: 5px;
-      border-radius: 4px;
-    }
+.action-buttons__button {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+}
 
-    &__button:last-child {
-      margin-bottom: 0;
-    }
-  }
+.action-buttons__button--edit {
+  background-color: #17a2b8;
+  color: #fff;
+}
+
+.action-buttons__button--view {
+  background-color: #ffc107;
+  color: #fff;
+}
+
+.action-buttons__button--delete {
+  background-color: #dc3545;
+  color: #fff;
 }
