--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
 @import "ag-grid-community/styles/ag-grid.css";
 @import "ag-grid-community/styles/ag-theme-alpine.css";
+@import "bootstrap-icons/font/bootstrap-icons.css";
 
 /* Custom Navbar Theme */
 .custom-navbar {
@@ -19,9 +17,3 @@
   color: #fff; /* Active link in white */
 }
 
-@media (max-width: 768px) {
-  .ag-theme-alpine .ag-cell[col-id="actions"] {
-    display: flex; /* Ensure the cell is displayed */
-    width: 180px; /* Maintain fixed width */
-  }
-}
